--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First GitHub Repo</title>
+    <title>Classy Mart</title>
 </head>
 <body>
-    
+    <h1>Welcome to Classy Mart</h1>
+    <p>Learn more about Classy Mart</p>
 </body>
 </html>
